--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
 #    url: /teaching/    
     
   - title: "Portfolio"
-    url: https://josephkbs.github.io/portfolio/
+    url: https://josephkbs.github.io/_portfolio/
         
 #  - title: "Blog Posts"
 #    url: /year-archive/
