--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: https://josephkbs.github.io/_portfolio/
         
   - title: "Blog Posts"
-    url: /year-archive/
+    url: https://josephkbs.github.io/year-archive/
     
 
     
